# libft

./: .gitignore  CMakeLists.txt  Coloring.mk  Libft.mk  Makefile  Project.mk  README.md  author  colors.mk  ft_abs.c  ft_alpha.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isdigit.c  ft_islower.c  ft_isupper.c  ft_itoa.c  ft_lstdelone.c  ft_lstmap.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strnew.c  ft_strsplit.c  (+6 more)
include/: ftio.h  ftrange.h  ftstring.h
include/ft/: bool.h  char.h  conv.h  io.h  list.h  math.h  memory.h  range.h  stack.h  stdlib.h  string.h
includes/: ft.h  ft_ctype.h  ft_io.h  ft_list.h  ft_stdlib.h  ft_string.h  ftcomplex.h  ftctype.h  ftlist.h  ftmath.h  ftrange.h  ftstdlib.h  get_next_line.h  libft.h
source/char/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_ishex.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_tolower.c  ft_toupper.c  ft_wcsize.c
source/conv/: ft_atof.c  ft_atoi.c  ft_itoa.c  ft_itoa_base.c  ft_strtoi.c  ft_strtoli.c
source/ftctype/: ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_ishex.c  ft_isprint.c  ft_isspace.c  ft_tolower.c
source/ftio/: close_file.c  ft_putchar.c  ft_putstr_fd.c
source/ftlist/: ft_lstadd.c  ft_lstat.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_lstsize.c
source/ftmath/: ft_abs.c  ft_fabs.c  ft_round.c  ft_swap.c
source/ftrange/: alloc_rangef.c  alloc_rangei.c  ft_mapf.c  ft_mapi.c  get_rangei.c  set_rangei.c
source/ftstdlib/: ft_bzero.c  ft_itoa.c  ft_itoa_base.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c
sources/: .#ft_isspace.c  arrdel.c  close_file.c  exit_with_error.c  ft_abs.c  ft_arrdel.c  ft_arrlen.c  ft_atod.c  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_delsplit.c  ft_fabs.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_ishex.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstat.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_lstsize.c  ft_map.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  (+48 more)
src/: ft_arrlen.c  ft_atod.c  ft_atof.c  ft_atoi.c  ft_isdigit.c  ft_ishex.c  ft_lstat.c  ft_lstat.c~  ft_lstdelone.c  ft_lstmap.c  ft_lstsize.c  ft_memccpy.c  ft_memcpy.c  ft_memmove.c  ft_putchar.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_strchr.c  ft_strclr.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncmp.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strrev.c  ft_strsub.c  ft_tolower.c  get_integer.c  get_string.c
srcs/: ft_abs.c  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_lstnew.c  ft_lstrev.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strmap.c  (+14 more)
tests/: CMakeLists.txt  tests.c  tests.h  tests_main.c
(+275 files in other folders)
