cmake_minimum_required(VERSION 3.12)
project(ft C)

set(CMAKE_C_STANDARD 11)
set(FT_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/" PARENT_SCOPE)

add_library(${PROJECT_NAME} SHARED
		source/char/ft_isalnum.c
		source/char/ft_isalpha.c
		source/char/ft_isascii.c
		source/char/ft_isdigit.c
		source/char/ft_islower.c
		source/char/ft_isprint.c
		source/char/ft_isspace.c
		source/char/ft_isupper.c
		source/char/ft_tolower.c
		source/char/ft_toupper.c
		source/char/ft_wcsize.c
		source/conv/ft_atof.c
		source/conv/ft_atoi.c
		source/conv/ft_itoa.c
		source/conv/ft_itoa_base.c
		source/conv/ft_strtoi.c
		source/conv/ft_strtoli.c
		source/io/ft_close_file.c
		source/io/ft_dprintf.c
		source/io/ft_get_float.c
		source/io/ft_get_int.c
		source/io/ft_get_line_count.c
		source/io/ft_get_string.c
		source/io/ft_open_file.c
		source/io/ft_printf.c
		source/io/ft_putchar.c
		source/io/ft_putchar_fd.c
		source/io/ft_putendl.c
		source/io/ft_putendl_fd.c
		source/io/ft_putnbr.c
		source/io/ft_putnbr_fd.c
		source/io/ft_putnstr.c
		source/io/ft_putnstr_fd.c
		source/io/ft_putstr.c
		source/io/ft_putstr_fd.c
		source/io/ft_sprintf.c
		source/io/ft_vsprintf.c
		source/list/ft_lstadd.c
		source/list/ft_lstdel.c
		source/list/ft_lstdel_el.c
		source/list/ft_lstdelall.c
		source/list/ft_lstnew.c
		source/list/ft_lstsize.c
		source/memory/ft_common_deleter.c
		source/memory/ft_memncpy.c
		source/misc/get_string/fd_data/manage_fd_data.c
		source/misc/get_string/fd_data/manage_find_fd_data.c
		source/misc/get_string/fd_data/read_data_to_fd_data.c
		source/misc/printf/arg/arg1.c
		source/misc/printf/arg/arg2.c
		source/misc/printf/arg/arg3.c
		source/misc/printf/arg/arg4.c
		source/misc/printf/arg/arg5.c
		source/misc/printf/arg/arg6.c
		source/misc/printf/arg/arg7.c
		source/misc/printf/arg/arg8.c
		source/misc/printf/arg/arg9.c
		source/misc/printf/info/info.c
		source/misc/printf/parse/parse1.c
		source/misc/printf/parse/parse2.c
		source/stack/ft_create_stack.c
		source/stack/ft_create_stack_element.c
		source/stack/ft_delete_stack.c
		source/stack/ft_delete_stack_element.c
		source/stack/ft_pop_stack.c
		source/stack/ft_push_stack.c
		source/stack/ft_rotate_stack.c
		source/stack/ft_rrotate_stack.c
		source/stack/ft_swap_top.c
		source/string/ft_resize_str.c
		source/string/ft_str_is_digits.c
		source/string/ft_strcat.c
		source/string/ft_strcc.c
		source/string/ft_strchr.c
		source/string/ft_strcmp.c
		source/string/ft_strcpy.c
		source/string/ft_strcs.c
		source/string/ft_strdel.c
		source/string/ft_strdup.c
		source/string/ft_strends.c
		source/string/ft_strequ.c
		source/string/ft_strfill.c
		source/string/ft_strjoin.c
		source/string/ft_strlcat.c
		source/string/ft_strlen.c
		source/string/ft_strncat.c
		source/string/ft_strncmp.c
		source/string/ft_strncpy.c
		source/string/ft_strndup.c
		source/string/ft_strnequ.c
		source/string/ft_strnew.c
		source/string/ft_strnstr.c
		source/string/ft_strrchr.c
		source/string/ft_strrev.c
		source/string/ft_strstarts.c
		source/string/ft_strstr.c
		source/string/ft_strsub.c
		source/string/ft_strtrim.c
		source/string/ft_wstrclen.c
		source/string/ft_wstrlen.c
		source/string/ft_wstrncpy.c)
target_include_directories(${PROJECT_NAME} PRIVATE include)

add_subdirectory(tests)
